[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = "Создание теста"
authors = ["Ekaterina Soboleva <ek.a.soboleva@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selene = ">=2.0.0rc9"
selenium = "~=4.24.0"
allure-pytest = ">=2.13.5"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
